# XSigma

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .cmake-format.yaml  .codespellrc  .dmypy.json  .flake8  .gitignore  .gitmodules  .lintrunner.toml  .lintrunner.toml.backup  .lintrunner.toml.xsigma  .pylintrc  CHANGELOG.md  CI_FIXES_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONFLICT_RESOLUTION_SUMMARY.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PRE_PUSH_CHECKLIST.md  README.md  SECURITY.md  WORKSPACE.bazel  clean_submodules.sh  default.profraw  fix_quoted_includes.py  fix_trailing_spaces.py  main.py  mypy-strict.ini  mypy.ini  pyproject.toml  requirements.txt
.augment/rules/: ThirdParty.md  build rule.md  builder.md  c++.md  coding.md  markdown.md  must-have.md  python notebook.md  python.md  testing.md
.github/cmake/: configure_cache.cmake
.github/workflows/: ci.yml
.lintbin/: clang-format
Cmake/flags/: README.md  build_type.cmake  checks.cmake  compile_definitions.cmake  compiler_checks.cmake  platform.cmake
Cmake/tools/: build_speed_optimization.cmake  cache.cmake  clangTidy.cmake  clang_tidy.cmake  compression.cmake  coverage.cmake  cppcheck.cmake  cuda.cmake  dependencies.cmake  experimental.cmake  googletest.cmake  helperMacros.cmake  helper_macros.cmake  hip.cmake  iwyu.cmake  linker.cmake  logging.cmake  lto.cmake  memcheckValgrind.cmake  mkl.cmake  numa.cmake  openmp.cmake  outputDirectories.cmake  sanitize.cmake  spell.cmake  summary.cmake  tbb.cmake  utils.cmake  valgrind.cmake  xsigmaSanitize.cmake  xsigmaTestUtils.cmake  xsigmaUtils.cmake
Data/Default/: correlation_matrix.json  currency_calendar_mapping.json  currency_ibor_mapping.json  currency_rfr_mapping.json  futures_conventions.json  fx_spot_convention.json  inflation_convention.json  inflation_conventions.json  swap_conventions.json  xccy_basis_leg.json
Docs/: BAZEL_BUILD.md  BAZEL_FILES_SUMMARY.txt  BAZEL_QUICKSTART.md  BAZEL_STRUCTURE.md  BROKEN_LINKS_REPORT.md  CLASS_HIERARCHY.md  CMAKE_FORMAT_BUG_FIX_SUMMARY.md  CMAKE_FORMAT_CONFLICT_RESOLUTION.md  CMAKE_FORMAT_INTEGRATION_COMPLETE.md  CUDA_MEMORY_ALLOCATOR_DEEP_DIVE.md  ITT-API-MSVC-BUILD-ANALYSIS.md  KINETO_ARCHITECTURE_SUMMARY.md  KINETO_COMPLETE_REVIEW.md  KINETO_IMPLEMENTATION_DETAILS.md  KINETO_INDEX.md  KINETO_PROFILER_GUIDE.md  KINETO_QUICK_REFERENCE.md  KINETO_README.md  LTO_DECISION_MATRIX_AND_COMPARISON.md  LTO_INVESTIGATION_ANALYSIS.md  LTO_INVESTIGATION_INDEX.md  LTO_INVESTIGATION_SUMMARY.md  MEMORY_VISIBILITY_AUDIT_REPORT.md  NAMING_CONVENTION_ANALYSIS.md  OPENSSF_COMPLIANCE.md  OpenSSF_Badge_Summary.md  OpenSSF_Badge_Update_Guide.md  PARALLELFOR_FLAKY_TEST_FIX.md  PARALLEL_BACKENDS_PROFILING_COMPARISON.md  PROFILER-TESTING-COMPLETION-SUMMARY.md  PROFILER_BEFORE_AFTER.md  PROFILER_CODE_EXAMPLES-1.md  PROFILER_COMPLETION_REPORT.md  PROFILER_IMPLEMENTATION_CHECKLIST.md  PROFILER_IMPLEMENTATION_SUMMARY.md  PROFILER_INSTRUMENTATION_REVIEW.md  PROFILER_PYTORCH_INDEX.md  PROFILER_PYTORCH_SUMMARY.md  PROFILER_PYTORCH_TABLE_FORMAT.md  PROFILER_QUICK_REFERENCE.md  (+30 more)
Examples/Profiling/: CMakeLists.txt  README.md  example_profiling_basic.cpp  example_profiling_basic.cxx
Examples/SMP/: CMakeLists.txt  README.md  example_parallel_for.cxx  example_parallel_reduce.cxx  example_parallelize_1d.cxx  example_thread_configuration.cxx
Experimental/: CUDA_MEMORY_ALLOCATOR_DEEP_DIVE.md
Scripts/: all-clang-format.sh  all-cmake-format.sh  analyze_coverage.py  analyze_gpu_test_coverage.py  asan_suppressions.txt  benchmark_gpu_allocators.py  compute_code_coverage_locally.sh  cppcheck_suppressions.txt  default.profraw  final_fix_includes.py  fix_pytorch_profiler_refactor.py  iwyu_exclusion.imp  lsan_suppressions.txt  msan_suppressions.txt  refactor_pytorch_profiler.py  run_coverage.sh  run_gpu_benchmarks.py  run_iwyu_analysis.py  sanitizer_ignore.txt  setup.py  setup_bazel.py  setup_git_hooks.py  test_all_configurations.sh  test_cmake_format_no_data_loss.sh  test_git_hooks.py  test_integration.py  tsan_suppressions.txt  ubsan_suppressions.txt  valgrind_ctest.sh  verify_cmake_format_compatibility.sh
bazel/: BUILD.bazel  xsigma.bzl
docs/: Allocator_Selection_Strategy.md  BUILD_AND_TEST_SUMMARY.md  Build_Validation_Guide.md  CI_ANALYSIS_AND_FIXES.md  CI_CD_PIPELINE.md  CI_CMAKE_MIGRATION_GUIDE.md  CI_COMPILER_INSTALLATION_CHANGES.md  CI_COMPILER_INSTALLATION_CHECKLIST.md  CI_COMPILER_INSTALLATION_FIX.md  CI_COMPILER_SEPARATION_BEFORE_AFTER.md  CI_FIXES_QUICK_REFERENCE.md  CI_IMPLEMENTATION_SUMMARY.md  CI_INVESTIGATION_SUMMARY.md  CI_MIGRATION_COMPLETE.md  CI_QUICK_START.md  CI_REFACTORING_GUIDE.md  CI_REFACTORING_SUMMARY.md  CI_REMOVAL_BEFORE_AFTER.md  CI_REMOVAL_SUMMARY.md  CI_REMOVAL_VERIFICATION_REPORT.md  CI_SCRIPT_FIXES.md  CMAKE_COMMAND_REFERENCE.md  CODE_CHANGES_DETAILED.md  CODE_CHANGE_REFERENCE.md  COVERAGE_BUILD_TEST_REPORT.md  COVERAGE_CI_FIX.md  COVERAGE_CI_FIX_VERIFICATION_COMPLETE.md  COVERAGE_INTEGRATION_COMPLETE.md  COVERAGE_INTEGRATION_SUMMARY.md  COVERAGE_TECHNICAL_REFERENCE.md  COVERAGE_USER_GUIDE.md  COVERAGE_VERIFICATION_GUIDE.md  CPPCHECK_INLINE_SUPPRESSIONS_SUMMARY.md  CPPCHECK_QUICK_REFERENCE.md  DEVELOPER_GUIDE.md  DOUBLE_HTML_EXTENSION_FIX.md  FEATURES.md  FINAL_SUMMARY_DOUBLE_HTML_FIX.md  GPU_Allocator_Refactoring_Final_Report.md  GPU_Allocator_Test_Summary.md  (+73 more)
mypy_plugins/: check_mypy_version.py  sympy_mypy_plugin.py
smp_new/: BACKEND_EXAMPLES.md  BACKEND_QUICK_REFERENCE.md  BACKEND_SUPPORT.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md
smp_new/benchmark/: CMakeLists.txt
smp_new/core/: thread_pool.cxx  thread_pool.h
smp_new/native/: parallel_native.cxx  parallel_native.h
smp_new/openmp/: parallel_openmp.cxx
smp_new/parallel/: parallel_api.cxx  parallel_api.h  parallel_api.hxx
smp_new/test/: CMakeLists.txt  test_backends.cxx  test_parallel_for.cxx  test_parallel_reduce.cxx  test_task_execution.cxx  test_thread_pool.cxx
xsigma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+952 files in other folders)
